Adaugare in gitignore fisiere target, build si in pom packaging jar

--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,6 @@
     <groupId>groupId</groupId>
     <artifactId>LibraryManager</artifactId>
     <version>1.0-SNAPSHOT</version>
-
+    <packaging>jar</packaging>
     
 </project>
