--- a/pom.xml
+++ b/pom.xml
@@ -26,5 +26,10 @@
             <artifactId>jackson-databind</artifactId>
             <version>2.11.0.rc1</version>
         </dependency>
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-io</artifactId>
+            <version>1.3.2</version>
+        </dependency>
     </dependencies>
 </project>
